[package]
name = "aqa_feed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.26", features = ["server", "http1", "http2", "tcp", "stream"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "net", "tracing"] }
